--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "koossaayy/laravel-mapbox": "^0.2.1",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
