--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "koossaayy/laravel-mapbox": "^0.2.1",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.15",
+        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-permission": "^5.5"
