--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "spatie/opening-hours": "^2.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
