--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "consoletvs/charts": "7.*",
         "guzzlehttp/guzzle": "^7.2",
         "koossaayy/laravel-mapbox": "^0.2.1",
         "laravel/framework": "^9.11",
