--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "rap2hpoutre/fast-excel": "^4.1",
         "spatie/laravel-permission": "^5.5",
         "spatie/opening-hours": "^2.11"
     },
